Version 1.11.6+dev:
 * Add-ons client:
   * Add-ons downloaded with clients from this version onwards are shown
     in the Remove Add-ons with their original titles from the add-ons
     server now, instead of artificially generating titles by replacing
     underscores from file names.
   * Report errors caused by faulty local .pbl files properly instead of
     presenting them as network errors.
 * AI:
   * Micro AIs:
     * New Simple Attack Micro AI
     * Messenger MAI now works with units (both messenger and escort) without
       weapons and when path to next waypoint is entirely blocked
     * Fixed bug that prevented removal of sticky MAIs
 * Engine:
   * CampaignWML support for MP including difficulties, extra defines etc.
   * Use the same codepath to initialize every MP campaign's scenario, thus
     allowing the display of a functional MP "Connect/Wait" screen before the
     next scenario.
 * Graphics
   * Full animations for the Dwarven Thunderer line.
 * Language and i18n:
   * Updated translations: German, Greek, Indonesian, Lithuanian, Portuguese,
     Vietnamese
   * Improved internationalization of notifications on Windows and OS X.
 * Lua API:
   * Added scroll_to_leader field (read/write) to wesnoth.sides table
    elements.
 * WML engine:
   * [store_side] now stores the scroll_to_leader attribute from sides.
   * Added new CampaignWML attributes "type", "min_players" and "max_players".
   * Added new ScenariowML attributes "new_game_title",
     "remove_from_carryover_on_leaders_loss" and "force_use_map_settings".
   * Allow numerical values for SideWML "controller" attribute.
 * User interface:
   * MP "Create" screen has been revamped by moving scenario configuration
     widgets to a new MP "Configure" screen, introducing a description box,
     adding a combo selection for different types of game, and adjusting it to
     work well with MP campaigns.
   * Possible fix for clipboard integration issues with GUI2 widgets on X11.