@@ -4,6 +4,8 @@ Version 1.11.6+dev:
      in the Remove Add-ons with their original titles from the add-ons
      server now, instead of artificially generating titles by replacing
      underscores from file names.
+   * Fixed color key disparities between the Add-ons Manager dialog and the
+     add-on Description dialog.
    * Report errors caused by faulty local .pbl files properly instead of
      presenting them as network errors.
  * AI:
